chore: fix spacing for empty dashboard

--- a/frontend/src/components/dashboard/campaigns/Campaigns.module.scss
+++ b/frontend/src/components/dashboard/campaigns/Campaigns.module.scss
@@ -87,20 +87,14 @@
 }
 
 .emptyDashboard {
+  @extend %body-1;
   text-align: center;
   max-width: 600px;
   margin: 0 auto;
 
   .image {
     width: 350px;
-  }
-
-  h2 {
-    font-weight: 500;
-  }
-  h5 {
-    font-weight: normal;
-    margin-bottom: 1rem;
+    margin-bottom: $spacing-7;
   }
 
   .darkBlueButton {
@@ -109,9 +103,11 @@
   .darkGreenButton {
     @include button($green-500, $green-300, $grey-900);
   }
+
   .actions {
     @include flex-horizontal;
     justify-content: space-evenly;
+    margin-top: $spacing-7;
     button {
       margin-bottom: 1rem;
     }
